# tinytorch

./: .gitignore  README.md  pyproject.toml  setup
scripts/: classifier_example.py  linear_example.py  sequential_example.py  sgd_example.py
tests/: check_gradients.py  conftest.py  test_activations.py  test_cross_entropy.py  test_embedding.py  test_kv_cache.py  test_layer_norm.py  test_linear.py  test_multi_head_attention.py  test_scaled_dot_product_attention.py  test_transformer_block.py
tinytorch/: dataset.py  exceptions.py  linear.py  module.py  mse.py  optimizers.py  parameter.py  relu.py  sequence.py  training.py  types.py
tinytorch/activations/: gelu.py  relu.py  sigmoid.py  softmax.py
tinytorch/base/: module.py  parameter.py
tinytorch/criteria/: cross_entropy.py  mse.py
tinytorch/datasets/: __init__.py  base.py  cifar10.py  dataloader.py  mnist.py
tinytorch/layers/: add.py  dropout.py  embedding.py  layer_norm.py  linear.py  matmul.py  module.py  scale.py  sequence.py  sequential.py
tinytorch/transformers/: kv_cache.py  multi_head_attention.py  positional_encoding.py  scaled_dot_product_attention.py  transformer_block.py
